[package]
name = "africa_universe_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["websockets", "rustls"] }
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
env_logger = "0.10"
log = "0.4"